--- a/.github/workflows/check-pr-description.yml
+++ b/.github/workflows/check-pr-description.yml
@@ -18,21 +18,7 @@ jobs:
 
           echo "✅ PR has a description."
 
-      - name: Fail if PR description does not reference an issue
-        run: |
-          DESCRIPTION="${{ github.event.pull_request.body }}"
-
-          echo "PR Description:"
-          echo "$DESCRIPTION"
-
-          if [[ ! "$DESCRIPTION" =~ Issue\ #[0-9]+ ]]; then
-            echo "❌ PR description must contain an issue reference like 'Issue: #1'"
-            exit 1
-          fi
-
-          echo "✅ PR description is valid and contains an issue reference."
-
-      - name: Fail if PR description does not order an issue to auto-close
+      - name: Fail if PR description does not include an issue reference
         run: |
           DESCRIPTION="${{ github.event.pull_request.body }}"
 
@@ -40,8 +26,8 @@ jobs:
           echo "$DESCRIPTION"
 
           if [[ ! "$DESCRIPTION" =~ (Fixes|Closes|Resolves)\ #[0-9]+ ]]; then
-            echo "❌ PR description must include 'Fixes #<issue>' to auto-close."
+            echo "❌ PR description must include 'Fixes', 'Closes' or 'Resolves' with an issue reference."
             exit 1
           fi
 
-          echo "✅ PR description is valid and contains an issue auto-close order."
+          echo "✅ PR description is valid and contains an issue reference."
