--- a/.github/workflows/check-pr-title.yml
+++ b/.github/workflows/check-pr-title.yml
@@ -1,4 +1,4 @@
-name: Check PR Title
+name: Check PR title
 
 on:
   workflow_dispatch:
@@ -15,8 +15,8 @@ jobs:
 
           echo "PR Title: $TITLE"
 
-          if [[ ! "$TITLE" =~ ^(feat|fix|chore|doc): ]]; then
-            echo "❌ PR title must start with 'feat:', 'fix:', 'chore:' or 'doc:'"
+          if [[ ! "$TITLE" =~ ^(feat|fix|chore|release|doc): ]]; then
+            echo "❌ PR title must start with 'feat:', 'fix:', 'chore:', 'release:' or 'doc:'"
             exit 1
           fi
 
