--- a/.github/workflows/check-pr-description.yml
+++ b/.github/workflows/check-pr-description.yml
@@ -1,4 +1,4 @@
-name: Check PR Description
+name: Check PR description
 
 on:
   workflow_dispatch:
@@ -7,6 +7,8 @@ on:
 
 jobs:
   check-description:
+    if: |
+      github.event.pull_request.base.ref != 'main'
     runs-on: ubuntu-latest
     steps:
       - name: Fail if PR description is empty
