feat: command-line tool written in Zig to build and run c programs (#66)
From a folder the tool compile, link and run a program.

Closes #63

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,15 @@ dkms.conf
 
 # Game Executable
 queen
+main
+
+# Zig
+.zig-cache/
+zig-out/
+bar
+*.o
+*.exe
+.DS_Store
+
+# Coding Tests
+.tests/
