feat: window playground (#67)
Simple playground containing basic attributes for starting any project.

Closes #61

--- a/.gitignore
+++ b/.gitignore
@@ -59,15 +59,21 @@ dkms.conf
 
 # Game Executable
 queen
+
+# Playground and Test executables
 main
+game
+
 
 # Zig
 .zig-cache/
 zig-out/
-bar
 *.o
 *.exe
 .DS_Store
 
 # Coding Tests
 .tests/
+
+# Object folder
+obj/
